Add "Open in Colab" badge

--- a/544_Python_Demo.ipynb
+++ b/544_Python_Demo.ipynb
@@ -32,7 +32,8 @@
         "id": "lZz_ujXZpsm9"
       },
       "source": [
-        "# SI 370: Correlation and Regression"
+        "# SI 370: Correlation and Regression\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/umsi-data-science/si544-fa2020/blob/master/544_Python_Demo.ipynb)\n"
       ]
     },
     {
