--- a/544_Python_Demo.ipynb
+++ b/544_Python_Demo.ipynb
@@ -7,6 +7,7 @@
    },
    "source": [
     "# SI 544: Python for Statistical Analysis \n",
+    "version 201112.1\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/umsi-data-science/si544-fa2020/blob/master/544_Python_Demo.ipynb)\n"
    ]
   },
@@ -355,15 +356,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bootstrapping the slope"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "id": "KignsXu7psnx",
     "outputId": "0d058fa3-ae82-4672-c1f8-ca3bc81c74f0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>score</th>\n",
+       "      <th>age</th>\n",
+       "      <th>bty_avg</th>\n",
+       "      <th>random</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>4.5</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2.333</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>3.9</td>\n",
+       "      <td>44</td>\n",
+       "      <td>6.500</td>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319</th>\n",
+       "      <td>4.5</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2.333</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>6.500</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>4.333</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     score  age  bty_avg  random\n",
+       "323    4.5   52    2.333     4.2\n",
+       "193    3.9   44    6.500     3.7\n",
+       "319    4.5   52    2.333     4.3\n",
+       "232    4.0   49    6.500     4.2\n",
+       "113    4.0   57    4.333     4.5"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Bootstrapping the slope\n",
     "evals_sample = evals.sample(n=len(evals),replace=True)\n",
     "evals_sample.head()"
    ]
@@ -426,7 +514,7 @@
     "id": "I-mLMN3xpsor"
    },
    "source": [
-    "Hypothesis tests about the mean\n"
+    "## Hypothesis tests about the mean\n"
    ]
   },
   {
@@ -478,7 +566,7 @@
    },
    "outputs": [],
    "source": [
-    "ax = sns.histplot(slopes)\n"
+    "ax = sns.histplot(slopes)"
    ]
   },
   {
