Add submission instructions

--- a/544_Python_Demo.ipynb
+++ b/544_Python_Demo.ipynb
@@ -7,8 +7,7 @@
    },
    "source": [
     "# SI 544: Python for Statistical Analysis \n",
-    "version 201112.2\n",
-    "\n"
+    "version 201112.3"
    ]
   },
   {
@@ -638,6 +637,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you're done working on this notebook (using Google Colab), go to the File menu and then select \"Download .ipynb\" and submit that file to Canvas for today's notebook.\n",
+    "\n",
+    "Note that you may want to experiment with saving the file to your Google Drive, or perhaps downloading it as a .py file and opening it up in VS Code.  You might even want to try downloading the .ipynb file and then opening the .ipynb file in VS Code (version 1.50 supports Jupyter notebooks)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -646,7 +654,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "colab": {
    "name": "544_Python_Demo.ipynb",
    "provenance": []
